--- a/foto_en.html
+++ b/foto_en.html
@@ -3,7 +3,7 @@
 <head>
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
-    <title>Location</title>
+    <title>Photos</title>
 </head>
 <body>
 <div class="header">
