--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Gigi & Cate</title>
+        <title>Cate & Gigi</title>
         <link href="style.css" rel="stylesheet" type="text/css">
         <meta description="" charset="utf-8"/>
     </head>
@@ -11,7 +11,7 @@
         <a href="foto.html">EN</a>
 </div>
 
-<h1 itemprop="name">Matrimonio Gigi & Cate</h1>
+<h1 itemprop="name">Matrimonio Cate & Gigi</h1>
         <p>Siete invitati al nostro matrimonio che si terrà il 12 settembre a Udine presso
             la chiesa di San Domenico, alle 11:00. </p>
 
