--- a/index_en.html
+++ b/index_en.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Gigi & Cate</title>
+        <title>Cate & Gigi</title>
         <link href="style.css" rel="stylesheet" type="text/css">
         <meta description="" charset="utf-8"/>
     </head>
