--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <h1 itemprop="name">Matrimonio Cate & Gigi</h1>
         <p>Siete invitati al nostro matrimonio che si terrà il 12 settembre a Udine presso
-            la chiesa di San Domenico alle 11:00. </p>
+            la chiesa di San Domenico, alle 11:00. </p>
 
 <h1></h1>
 <a href="location.html">Direzioni</a> |
