--- a/index_en.html
+++ b/index_en.html
@@ -7,8 +7,8 @@
     </head>
 <body>
 <div class="header">
-  <a href="lista_nozze.html">IT</a>
-        <a href="foto.html">EN</a>
+  <a href="index.html">IT</a>
+        <a href="index_en.html">EN</a>
 </div>
 
 <h1 itemprop="name">Gigi & Cate's wedding</h1>
