--- a/location_en.html
+++ b/location_en.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <div class="header">
-  <a href="lista_nozze.html">IT</a>
-        <a href="foto.html">EN</a>
+  <a href="location.html">IT</a>
+        <a href="location_en.html">EN</a>
 </div>
 <h1 itemprop="name">Cerimony</h1>
 <p>Chiesa di San Domenico, viale Resistencia, Udine (UD) </p>
