--- a/lista_nozze_en.html
+++ b/lista_nozze_en.html
@@ -10,11 +10,11 @@
   <a href="lista_nozze.html">IT</a>
         <a href="lista_nozze_en.html">EN</a>
 </div>
-<h1 itemprop="name"></h1>
-<p>Non abbiamo una lista nozze ma tanti progetti futuri!
-Per contribuire:
+<h1></h1>
+<p>We don't have a wedding list but lot of projects for the future!</p>
 
-</p>
+<p>To contribute:</p>
+<p>DE051001 1001 2626 6406 08</p>
 
 <h1></h1>
 <a href="index_en.html">Home</a> |
