--- a/lista_nozze.html
+++ b/lista_nozze.html
@@ -10,9 +10,16 @@
   <a href="lista_nozze.html">IT</a>
         <a href="lista_nozze_en.html">EN</a>
 </div>
-<h1 itemprop="name"></h1>
-<p>Non abbiamo una lista nozze ma tanti progetti futuri!
-Per contribuire:
+<h1></h1>
+<p>Non abbiamo una lista nozze ma tanti progetti futuri!</p>
+
+<p>Per contribuire:</p>
+<p>DE051001 1001 2626 6406 08</p>
+
+</p>
+
+
+
 
 </p>
 
