--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 </div>
 
 <h1 itemprop="name">Matrimonio Cate & Gigi</h1>
-        <p>Siete invitati al nostro matrimonio che si terrà il 12 settembre a Udine presso
+        <p>Siete invitati al nostro matrimonio che si terrà sabato 12 settembre 2020 a Udine presso
             la chiesa di San Domenico, alle 11:00. </p>
 
 <h1></h1>
+<p>
+<a href="index.html">Home</a> |
 <a href="location.html">Direzioni</a> |
 <a href="lista_nozze.html">Lista Nozze (?)</a> |
 <a href="foto.html">Foto</a>
+</p>
 
 </body>
 </html>
