--- a/index_en.html
+++ b/index_en.html
@@ -12,14 +12,16 @@
 </div>
 
 <h1 itemprop="name">Gigi & Cate's wedding</h1>
-        <p>You are invited to our wedding, Saturday, the 12th of September
-            in Udine. </p>
+        <p>You are invited to our wedding! It will be celebrated Saturday, the 12th of September 2020
+            in the Chiesa di San Domenico in Udine, at 11 am. </p>
 
 <h1></h1>
+<p>
 <a href="index_en.html">Home</a> |
 <a href="location_en.html">Directions</a> |
 <a href="lista_nozze_en.html">The list (?)</a> |
 <a href="foto_en.html">Photos</a>
+</p>
 
 </body>
 </html>
