--- a/lista_nozze.html
+++ b/lista_nozze.html
@@ -13,20 +13,15 @@
 <h1></h1>
 <p>Non abbiamo una lista nozze ma tanti progetti futuri!</p>
 
-<p>Per contribuire:</p>
+<p>Se volete contribuire:</p>
 <p>DE051001 1001 2626 6406 08</p>
 
-</p>
-
-
-
-
-</p>
-
 <h1></h1>
+<p>
 <a href="index.html">Home</a> |
 <a href="location.html">Direzioni</a> |
 <a href="lista_nozze.html">Lista Nozze (?)</a> |
 <a href="foto.html">Foto</a>
+</p>
 </body>
 </html>
