--- a/lista_nozze_en.html
+++ b/lista_nozze_en.html
@@ -11,15 +11,17 @@
         <a href="lista_nozze_en.html">EN</a>
 </div>
 <h1></h1>
-<p>We don't have a wedding list but lot of projects for the future!</p>
+<p>We don't have a wedding list but lots of projects for the future!</p>
 
-<p>To contribute:</p>
+<p>If you would like to contribute:</p>
 <p>DE051001 1001 2626 6406 08</p>
 
 <h1></h1>
+<p>
 <a href="index_en.html">Home</a> |
 <a href="location_en.html">Directions</a> |
 <a href="lista_nozze_en.html">The list (?)</a> |
 <a href="foto_en.html">Photos</a>
+</p>
 </body>
 </html>
