Fixing typos and number detection

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Cate & Gigi</title>
         <link href="style.css" rel="stylesheet" type="text/css">
         <meta description="" charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+
     </head>
 <body>
 <div class="header">
