--- a/location_en.html
+++ b/location_en.html
@@ -4,13 +4,15 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <title>Location</title>
+    <meta name="format-detection" content="telephone=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
 <body>
 <div class="header">
   <a href="location.html">IT</a>
         <a href="location_en.html">EN</a>
 </div>
-<h1 itemprop="name">Cerimony</h1>
+<h1 itemprop="name">Ceremony</h1>
 <p>Chiesa di San Domenico, viale Resistencia, Udine (UD) </p>
    <div class="mapouter"><div
            class="gmap_canvas"><iframe
