--- a/foto.html
+++ b/foto.html
@@ -3,6 +3,7 @@
 <head>
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <title>Foto</title>
 </head>
 <body>
