--- a/foto_en.html
+++ b/foto_en.html
@@ -4,6 +4,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <title>Photos</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
 <body>
 <div class="header">
