--- a/lista_nozze.html
+++ b/lista_nozze.html
@@ -3,7 +3,10 @@
 <head>
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
+    <meta name="format-detection" content="telephone=no">
     <title>Lista nozze</title>
+    <!--include the following meta tag to make chrome dev tools recognize media queries: -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
 <body>
 <div class="header">
