Non-breaking spaces in the title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="index_en.html">EN</a>
 </div>
 
-<h1 itemprop="name">Matrimonio Cate & Gigi</h1>
+<h1 itemprop="name">Matrimonio Cate&nbsp;&&nbsp;Gigi</h1>
         <p>Siete invitati al nostro matrimonio che si terrà sabato 12 settembre 2020 a Udine presso
             la chiesa di San Domenico, alle 11:00. </p>
 
