--- a/index_en.html
+++ b/index_en.html
@@ -12,7 +12,7 @@
         <a href="index_en.html">EN</a>
 </div>
 
-<h1 itemprop="name">Gigi & Cate's wedding</h1>
+<h1 itemprop="name">Gigi&nbsp;&&nbsp;Cate's wedding</h1>
         <p>You are invited to our wedding! It will be celebrated Saturday, the 12th of September 2020
             in the Chiesa di San Domenico in Udine, at 11 am. </p>
 
