Made the canvas ids unique

--- a/location.html
+++ b/location.html
@@ -16,7 +16,7 @@
    <div class="mapouter"><div
            class="gmap_canvas"><iframe
            width="350" height="250"
-           id="gmap_canvas"
+           id="gmap_canvas_ceremony"
            src="https://maps.google.com/maps?q=chiesa%20san%20domenico%20udine%20-parrocchia&t=&z=13&ie=UTF8&iwloc=&output=embed"
            frameborder="0" scrolling="no" marginheight="0"
            marginwidth="0"></iframe>
@@ -25,7 +25,7 @@
    <div class="mapouter"><div
        class="gmap_canvas"><iframe
        width="350" height="250"
-       id="gmap_canvas"
+       id="gmap_canvas_party"
        src="https://maps.google.com/maps?q=azienda%20agricola%20petrucco%20di%20lina%20e%20paolo&t=&z=13&ie=UTF8&iwloc=&output=embed"
        frameborder="0" scrolling="no" marginheight="0"
        marginwidth="0"></iframe>
