Fixed italian location name and english index's h1

--- a/foto.html
+++ b/foto.html
@@ -18,7 +18,7 @@
 <h1></h1>
 <p>
 <a href="index.html">Home</a> |
-<a href="location.html">Direzioni</a> |
+<a href="location.html">Location</a> |
 <a href="lista_nozze.html">Lista Nozze (?)</a> |
 <a href="foto.html">Foto</a>
 </p>
