--- a/lista_nozze_en.html
+++ b/lista_nozze_en.html
@@ -4,6 +4,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <title>The list</title>
+    <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
 <body>
