Changes to english version

--- a/foto_en.html
+++ b/foto_en.html
@@ -12,7 +12,7 @@
         <a href="foto_en.html">EN</a>
 </div>
 <h1></h1>
-<p>There will be here a link with the event pictures.
+<p>You will find a link to the photos from the wedding and the reception here.
 </p>
 
 <h1></h1>
