--- a/index_en.html
+++ b/index_en.html
@@ -13,8 +13,7 @@
 </div>
 
 <h1 itemprop="name">Cate&nbsp;&&nbsp;Gigi's wedding</h1>
-        <p>You are invited to our wedding! It will be celebrated Saturday, the 12th of September 2020
-            in the Chiesa di San Domenico in Udine, at 11 am. </p>
+        <p>We would like to cordially invite you to our wedding ceremony at 11 am on Saturday, September 12th at the Chiesa Di San Domenico in Udine </p>
 
 <h1></h1>
 <p>
