--- a/lista_nozze_en.html
+++ b/lista_nozze_en.html
@@ -13,10 +13,10 @@
         <a href="lista_nozze_en.html">EN</a>
 </div>
 <h1></h1>
-<p>We don't have a wedding list but lots of projects for the future!</p>
+<p>We don't have a wedding gift list, but we would be grateful if you could offer support for our future projects:</p>
 
-<p>If you would like to contribute:</p>
-<p>DE051001 1001 2626 6406 08</p>
+<p>Account holder: Luigi Petrucco</p>
+<p>IBAN: DE051001 1001 2626 6406 08</p>
 
 <h1></h1>
 <p>
