--- a/location_en.html
+++ b/location_en.html
@@ -21,7 +21,7 @@
            src="https://maps.google.com/maps?q=chiesa%20san%20domenico%20udine%20-parrocchia&t=&z=13&ie=UTF8&iwloc=&output=embed"
            frameborder="0" scrolling="no" marginheight="0"
            marginwidth="0"></iframe>
-<h1 itemprop="name">Party</h1>
+<h1 itemprop="name">Reception</h1>
 <p>Azienda Agricola Petrucco, via Morpurgo 12, Buttrio (UD)</p>
    <div class="mapouter"><div
        class="gmap_canvas"><iframe
