Header at top page

--- a/index_en.html
+++ b/index_en.html
@@ -11,17 +11,18 @@
   <a href="index.html">IT</a>
         <a href="index_en.html">EN</a>
 </div>
-
-<h1 itemprop="name">Cate&nbsp;&&nbsp;Gigi's wedding</h1>
-        <p>We would like to cordially invite you to our wedding ceremony at 11 am on Saturday, September 12th at the Chiesa Di San Domenico in Udine </p>
-
-<h1></h1>
 <p>
 <a href="index_en.html">Home</a> |
 <a href="location_en.html">Directions</a> |
 <a href="lista_nozze_en.html">The list (?)</a> |
 <a href="foto_en.html">Photos</a>
 </p>
+
+<h1 itemprop="name">Cate&nbsp;&&nbsp;Gigi's wedding</h1>
+        <p>We would like to cordially invite you to our wedding ceremony at 11 am on Saturday, September 12th at the Chiesa Di San Domenico in Udine. </p>
+
+<h1></h1>
+
 
 </body>
 </html>
