--- a/location_en.html
+++ b/location_en.html
@@ -12,31 +12,37 @@
   <a href="location.html">IT</a>
         <a href="location_en.html">EN</a>
 </div>
-<h1 itemprop="name">Ceremony</h1>
-<p>Chiesa di San Domenico, viale Resistencia, Udine (UD) </p>
-   <div class="mapouter"><div
-           class="gmap_canvas"><iframe
-           width="350" height="250"
-           id="gmap_canvas_ceremony"
-           src="https://maps.google.com/maps?q=chiesa%20san%20domenico%20udine%20-parrocchia&t=&z=13&ie=UTF8&iwloc=&output=embed"
-           frameborder="0" scrolling="no" marginheight="0"
-           marginwidth="0"></iframe>
-<h1 itemprop="name">Reception</h1>
-<p>Azienda Agricola Petrucco, via Morpurgo 12, Buttrio (UD)</p>
-   <div class="mapouter"><div
-       class="gmap_canvas"><iframe
-       width="350" height="250"
-       id="gmap_canvas_party"
-       src="https://maps.google.com/maps?q=azienda%20agricola%20petrucco%20di%20lina%20e%20paolo&t=&z=13&ie=UTF8&iwloc=&output=embed"
-       frameborder="0" scrolling="no" marginheight="0"
-       marginwidth="0"></iframe>
-</body>
-
-<h1></h1>
 <p>
 <a href="index_en.html">Home</a> |
 <a href="location_en.html">Directions</a> |
 <a href="lista_nozze_en.html">The list (?)</a> |
 <a href="foto_en.html">Photos</a>
 </p>
+<h1 itemprop="name">Ceremony</h1>
+<p>Chiesa di San Domenico, viale Resistencia, Udine (UD) </p>
+   <div class="mapouter">
+       <div class="gmap_canvas">
+           <iframe
+               width="350" height="250"
+               id="gmap_canvas_ceremony"
+               src="https://maps.google.com/maps?q=chiesa%20san%20domenico%20udine%20-parrocchia&t=&z=13&ie=UTF8&iwloc=&output=embed"
+               frameborder="0" scrolling="no" marginheight="0"
+               marginwidth="0"></iframe>
+       </div>
+   </div>
+<h1 itemprop="name">Reception</h1>
+<p>Azienda Agricola Petrucco, via Morpurgo 12, Buttrio (UD)</p>
+   <div class="mapouter">
+       <div class="gmap_canvas">
+           <iframe
+               width="350" height="250"
+               id="gmap_canvas_party"
+               src="https://maps.google.com/maps?q=azienda%20agricola%20petrucco%20di%20lina%20e%20paolo&t=&z=13&ie=UTF8&iwloc=&output=embed"
+               frameborder="0" scrolling="no" marginheight="0"
+               marginwidth="0"></iframe>
+           </div>
+       </div>
+</body>
+
+<h1></h1>
 </html>
