--- a/lista_nozze.html
+++ b/lista_nozze.html
@@ -20,11 +20,11 @@
 <a href="foto.html">Foto</a>
 </p>
 <h1></h1>
-<p>Non abbiamo una lista nozze ma tanti progetti futuri!</p>
+<p>Non abbiamo una lista nozze, ma tanti progetti futuri!</p>
 
 <p>Se volete contribuire:</p>
 <p>DE051001 1001 2626 6406 08</p>
-
+<p>Grazie!</p>
 <h1></h1>
 </body>
 </html>
