other list update

--- a/lista_nozze.html
+++ b/lista_nozze.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <title>Lista nozze</title>
-    <!--include the following meta tag to make chrome dev tools recognize media queries: -->
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
 <body>
@@ -22,7 +21,7 @@
 <h1></h1>
 <p>Non abbiamo una lista nozze, ma tanti progetti futuri!</p>
 
-<p>Se volete contribuire:</p>
+<p>Se vi fa piacere, potete contribuire qui:</p>
 <p>DE051001 1001 2626 6406 08</p>
 <p>Grazie!</p>
 <h1></h1>
