--- a/lista_nozze.html
+++ b/lista_nozze.html
@@ -19,7 +19,7 @@
 <a href="foto.html">Foto</a>
 </p>
 <h1></h1>
-<p>Non abbiamo una lista nozze, ma tanti progetti futuri!</p>
+<p>Non abbiamo una lista nozze, ma tanti progetti futuri e un viaggio di nozze in programma per il 2021!</p>
 
 <p>Se vi fa piacere, potete contribuire qui:</p>
 <p>DE051001 1001 2626 6406 08</p>
