--- a/lista_nozze_en.html
+++ b/lista_nozze_en.html
@@ -20,7 +20,7 @@
 </p>
 
 <h1></h1>
-<p>We don't have a wedding gift list, but we would be grateful if you could offer support for our future projects:</p>
+<p>We don't have a wedding gift list, but we would be grateful if you could offer support for our future projects, starting from an honeymoon in 2021!</p>
 
 <p>IBAN: DE051001 1001 2626 6406 08</p>
 <p>Account holder: Luigi Petrucco</p>
