--- a/lista_nozze.html
+++ b/lista_nozze.html
@@ -22,7 +22,8 @@
 <p>Non abbiamo una lista nozze, ma tanti progetti futuri e un viaggio di nozze in programma per il 2021!</p>
 
 <p>Se vi fa piacere, potete contribuire qui:</p>
-<p>DE051001 1001 2626 6406 08</p>
+<p>IBAN: DE051001 1001 2626 6406 08</p>
+<p>Intestatario: Luigi Petrucco</p>
 <p>Grazie!</p>
 <h1></h1>
 </body>
